Bump java-psi version (#240)